--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -59,3 +59,9 @@ pre {
     font-weight: 100;
     color:#c80125;
 }
+
+thead th.error {
+    background-color: #c80125;
+    color: #fff;
+    border-color: #c80125;
+}
