--- a/public/insomnia/css/insomnia.css
+++ b/public/insomnia/css/insomnia.css
@@ -183,7 +183,7 @@ input#request-uri
 div.posh
 {
     padding:20px;
-    margin-right:20px;
+/*    margin-right:20px;*/
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
     border:solid 15px #FBFBFB;
 }
