--- a/public/insomnia/css/insomnia.css
+++ b/public/insomnia/css/insomnia.css
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Droid+Serif);
-@import url(http://fonts.googleapis.com/css?family=PT+Sans);
+/*@import url(http://fonts.googleapis.com/css?family=Droid+Serif);
+@import url(http://fonts.googleapis.com/css?family=PT+Sans);*/
 
 div.insomnia
 {
@@ -57,6 +57,7 @@ div.insomnia ol.insomnia-backtrace
 
 div.insomnia div.insomnia-error-header
 {
+    padding-bottom: 15px;
     display:block;
     float:left;
 }
@@ -69,6 +70,7 @@ div.insomnia div.insomnia-error-header h1.insomnia-logo
     background-repeat: no-repeat;
     font-size: 1px;
     float:left;
+    display: none;
 }
 
 div.insomnia div.insomnia-error-header div.insomnia-title
@@ -186,4 +188,31 @@ div.posh
 /*    margin-right:20px;*/
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
     border:solid 15px #FBFBFB;
+    
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+}
+
+div.footer
+{
+    text-align:right;
+    margin-top:15px;
+    clear:both;
+}
+
+div.footer a
+{
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    padding:5px 8px;
+    border: solid 1px #ddd;
+    background-color: #FBFBFB;
+}
+
+html
+{
+    background-image: url( '/insomnia/images/gradient.jpg' );
+    background-repeat: repeat-x;
 }
