--- a/public/insomnia/css/insomnia.css
+++ b/public/insomnia/css/insomnia.css
@@ -141,19 +141,29 @@ span.insomnia-documentation-http-method
     min-width:100px;
     
     font-size: 18px;
-    
-    background: #c80125; /* Old browsers */
-    background: -moz-linear-gradient(top, #c80125 0%, #c80125 44%, #a30127 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#c80125), color-stop(44%,#c80125), color-stop(100%,#a30127)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, #c80125 0%,#c80125 44%,#a30127 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, #c80125 0%,#c80125 44%,#a30127 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, #c80125 0%,#c80125 44%,#a30127 100%); /* IE10+ */
-    background: linear-gradient(top, #c80125 0%,#c80125 44%,#a30127 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c80125', endColorstr='#a30127',GradientType=0 ); /* IE6-9 */
 
-/*    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;*/
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+}
+
+span.insomnia-documentation-http-title
+{
+    color: #512E10;
+    padding:6px 25px;
+    text-align: center;
+    display: block;
+    font-weight: bold;
+    letter-spacing: 0.01em;
+    float:left;
+    min-width:100px;
+    
+    background-color: #eee;
+    
+    font-size: 16px;
+    
+    border-right:solid 1px #ddd;
 }
 
 span.insomnia-documentation-http-uri
